tests/snapshots/multiline__multiline_layout_reverse_border@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --layout reverse --border"
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│>                                                                             │"
"└  3/3──────────────────────────────────────────────────────────────────────0/0┘"
"│> a                                                                           │"
"│  b1                                                                          │"
"│  b2                                                                          │"
"│  c                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
cursor: (2, 4)
