tests/snapshots/multiline__multiline_layout_reverse_list@002.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --layout reverse-list\nafter:\n  @key Up"
---
"> a                                                                             "
"  b1                                                                            "
"  b2                                                                            "
"  c                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
