tests/snapshots/multiline__multiline_mixed_navigation@001.snap
---
source: tests/multiline.rs
description: "input: items [\"single\", \"first\\\\nsecond\", \"only\"]\noptions: --multiline"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  only                                                                          "
"  first                                                                         "
"  second                                                                        "
"> single                                                                        "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
