tests/snapshots/multiline__multiline_mixed_navigation@002.snap
---
source: tests/multiline.rs
description: "input: items [\"single\", \"first\\\\nsecond\", \"only\"]\noptions: --multiline\nafter:\n  @key Up"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  only                                                                          "
"> first                                                                         "
"  second                                                                        "
"  single                                                                        "
"  3/3                                                                        1/0"
">                                                                               "
cursor: (24, 3)
