tests/snapshots/multiline__multiline_multi@003.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --multi\nafter:\n  @key Up"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> c                                                                             "
"  b1                                                                            "
"  b2                                                                            "
" >a                                                                             "
"  3/3 [1]                                                                    2/0"
">                                                                               "
cursor: (24, 3)
