tests/snapshots/multiline__multiline_multi@004.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --multi\nafter:\n  @shift Tab"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">>c                                                                             "
"  b1                                                                            "
"  b2                                                                            "
" >a                                                                             "
"  3/3 [2]                                                                    2/0"
">                                                                               "
cursor: (24, 3)
