tests/snapshots/multiline__multiline_no_match@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\\\\nb\", \"c\\\\nd\"]\noptions: --multiline -q xyz"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/2                                                                        0/0"
"> xyz                                                                           "
cursor: (24, 6)
