tests/snapshots/multiline__multiline_no_sort@001.snap
---
source: tests/multiline.rs
description: "input: items [\"c1\\\\nc2\", \"a1\\\\na2\", \"b1\\\\nb2\"]\noptions: --multiline --no-sort"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b1                                                                            "
"  b2                                                                            "
"  a1                                                                            "
"  a2                                                                            "
"> c1                                                                            "
"  c2                                                                            "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
